--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -5,7 +5,7 @@
       %title Sample Deployment
       :css
         body {
-          color: #ffffff;
+          color: #FFA71A;
           background-color: #0000ff;
           font-family: Arial, sans-serif;
           font-size: 15px;
