--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -5,7 +5,7 @@
       %title Sample Deployment
       :css
         body {
-          color: #FFA71A;
+          color: #C0FFEE;
           background-color: #c0ffee;
           font-family: Arial, sans-serif;
           font-size: 15px;
